2009-01-01  Bruno Coudoin,,,  <bruno.coudoin@free.fr>

	More integration of the single file skin.

	* boards/skins/gartoon/skin.svg:
	* src/boards/menu2.c: (menu_start), (menu_create_item):
	* src/gcompris/about.c: (gc_about_start):
	* src/gcompris/config.c: (gc_config_start):
	* src/gcompris/dialog.c: (gc_dialog):
	* src/gcompris/gcompris_confirm.c: (display_confirm):
	* src/gcompris/help.c: (gc_help_start):
	* src/gcompris/skin.c:

2009-01-01  Bruno Coudoin,,,  <bruno.coudoin@free.fr>

	Added an API entry gc_set_background_by_id to ease
	SVG integration.
	Now the menu uses the svg data from the skin.svg file.

	* boards/skins/gartoon/skin.svg:
	* src/boards/menu2.c: (menu_start):
	* src/gcompris/bar.c: (gc_bar_start):
	* src/gcompris/gameutil.h:
	* src/gcompris/gcompris.c: (_clear_svg_background),
	(_clear_pixmap_background), (gc_set_background),
	(gc_set_background_by_id):
	* src/gcompris/gcompris.h:
	* src/gcompris/skin.c: (gc_skin_rsvg_get):
	* src/gcompris/skin.h:

2008-12-22  Bruno coudoin  <bruno.coudoin@free.fr>

	More work to use more svg

	* configure.in:
	* src/babymatch-activity/resources/babymatch/fusee.svg:
	* src/billard-activity/billard.c: (start_board):
	* src/billard-activity/resources/billard/Makefile.am:
	* src/followline-activity/followline.py:
	* src/followline-activity/resources/followline/Makefile.am:
	* src/followline-activity/resources/followline/water_spot.svg:
	* src/imageid-activity/imageid.c: (start_board):
	* src/imageid-activity/resources/imageid/Makefile.am:
	* src/leftright-activity/resources/leftright/background.kpm:
	* src/readingh-activity/reading.c: (start_board), (ask_ready),
	(ask_yes_no):
	* src/readingh-activity/resources/Makefile.am:
	* src/tangram-activity/gtans.c: (start_board):
	* src/tangram-activity/resources/tangram/Makefile.am:

2008-12-22  Bruno coudoin  <bruno.coudoin@free.fr>

	Integrated original svg images in the clockgame activity.

	* src/clockgame-activity/clockgame.c: (start_board):